# aion2-script

./: LICENSE  pyproject.toml
src/: aion2_bot.py  bot_config.py  console.py  human_mouse.py  km_driver.py  role.py  role_bowstar.py  role_swordstar.py  utils.py  video_capture.py
src/tools/: export.py  yolo_screen.py  yolo_video.py  yolo_world_demo.py
